--- a/Browser Folder/TingShuo1.1/index.html
+++ b/Browser Folder/TingShuo1.1/index.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/4.1.0/css/bootstrap.min.css">
+    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/popper.js/1.12.5/umd/popper.min.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+
 </head>
 
 <body>
@@ -56,7 +61,7 @@
                         </li>
                         <li class="fl">
                             <a href="">登录</a>
-                             / 
+                            /
                             <a href="">注册</a>
                         </li>
                     </ul>
@@ -70,11 +75,161 @@
             </div>
         </div>
     </div>
-    <div class="lunbo">
+    <div class="index">
+        <div class="lunboBar-w">
+            <div class="lunboBar">
+                <div class="lunboMenu">
+                    <div class="menuContent">
+                        <a href="">
+                            <span class="menuGroup">
+                                英语听力 / 能力考 / 新闻
+                            </span>
+                            <img src="./icon/kuozhan.png" alt="更多">
+                        </a>
+                    </div>
+                    <div class="menuContent">
+                        <a href="">
+                            <span class="menuGroup">
+                                英语口语 / 雅思 / 托福
 
-    </div>
-    <div class="tuijian">
+                            </span>
+                            <img src="./icon/kuozhan.png" alt="更多">
+                        </a>
+                    </div>
+                    <div class="menuContent">
+                        <a href="">
+                            <span class="menuGroup">
+                                英语阅读 / 新闻 / 能力考
+                            </span>
+                            <img src="./icon/kuozhan.png" alt="更多">
+                        </a>
+                    </div>
+                    <div class="menuContent">
+                        <a href="">
+                            <span class="menuGroup">
+                                日语听力 / 入门 / 能力考
+                            </span>
+                            <img src="./icon/kuozhan.png" alt="更多">
+                        </a>
+                    </div>
+                    <div class="menuContent">
+                        <a href="">
+                            <span class="menuGroup">
+                                日语口语 / 能力考 / 标日
+                            </span>
+                            <img src="./icon/kuozhan.png" alt="更多">
+                        </a>
+                    </div>
+                    <div class="menuContent">
+                        <a href="">
+                            <span class="menuGroup">
+                                日语阅读 / 能力考 / 新闻
+                            </span>
+                            <img src="./icon/kuozhan.png" alt="更多">
+                        </a>
+                    </div>
+                    <div class="menuContent">
+                        <a href="">
+                            <span class="menuGroup">
+                                多语种 / 韩语 / 法语
+                            </span>
+                            <img src="./icon/kuozhan.png" alt="更多">
+                        </a>
+                    </div>
+                </div>
+                <div class="lunboImg">
+                    <div id="lunbo" class="carousel slide" data-ride="carousel">
+                        <!-- 指示符 -->
+                        <ul class="carousel-indicators">
+                            <li data-target="#lunbo" data-slide-to="0" class="active"></li>
+                            <li data-target="#lunbo" data-slide-to="1"></li>
+                            <li data-target="#lunbo" data-slide-to="2"></li>
+                        </ul>
+                        <!-- 轮播图片 -->
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="./img/lunbo3.png">
+                                <div class="carousel-caption">
+                                    <h3>第一张图片描述标题</h3>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./img/lunbo2.png">
+                                <div class="carousel-caption">
+                                    <h3>第二张图片描述标题</h3>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./img/lunbo1.png">
+                                <div class="carousel-caption">
+                                    <h3>第三张图片描述标题</h3>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- 左右切换按钮 -->
+                        <a class="carousel-control-prev" href="#lunbo" data-slide="prev">
+                            <span class="carousel-control-prev-icon"></span>
+                        </a>
+                        <a class="carousel-control-next" href="#lunbo" data-slide="next">
+                            <span class="carousel-control-next-icon"></span>
+                        </a>
+                    </div>
+                </div>
+                <!-- <div class="menuKuoZhan">
+                    <div class="innerBox">
+                        <div class="innerBox-content">
+                            <div class="innerBox-content-top">
+                                <div class="box-title">
+                                    <span>英语听力</span>
+                                </div>
+                                <div class="box-content">
 
+                                </div>
+                            </div>
+                            <div class="innerBox-content-down">
+
+                                </div>
+                        </div>
+                    </div>
+                </div>-->
+            </div>
+
+        </div>
+        <div class="tuijian">
+            <h5 class="tuijianTitle">
+                <span>
+                    <img style="height: 30px;" src="./img/zuoyezi.png" alt="">
+                </span>
+                <span>
+                    <img style="height: 40px;" src="./img/hua.png" alt="">
+                </span>
+                <span style="margin-left: 20px;">好</span>
+                /
+                <span>课</span>
+                /
+                <span>推</span>
+                /
+                <span style="margin-right: 20px;">荐</span>
+                <span>
+                    <img style="height: 40px;" src="./img/hua.png" alt="">
+                </span>
+                <span>
+                    <img style="height: 30px;" src="./img/youyezi.png" alt="">
+                </span>
+
+            </h5>
+            <!-- 课程推荐 -->
+            <div class="tuijianContent">
+                <div class="course-box">
+                    <div class="course-img">
+                        
+                    </div>
+                    <div class="course-content">
+
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="footer">
 
