--- a/Browser Folder/TingShuo1.1/index.html
+++ b/Browser Folder/TingShuo1.1/index.html
@@ -60,7 +60,7 @@
                             </div>
                         </li>
                         <li class="fl">
-                            <a href="">登录</a>
+                            <a href="me.html">登录</a>
                             /
                             <a href="">注册</a>
                         </li>
@@ -150,19 +150,19 @@
                             <div class="carousel-item active">
                                 <img src="./img/lunbo3.png">
                                 <div class="carousel-caption">
-                                    <h3>第一张图片描述标题</h3>
+                                    <h5>第一张图片描述标题</h5>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <img src="./img/lunbo2.png">
                                 <div class="carousel-caption">
-                                    <h3>第二张图片描述标题</h3>
+                                    <h5>第二张图片描述标题</h5>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <img src="./img/lunbo1.png">
                                 <div class="carousel-caption">
-                                    <h3>第三张图片描述标题</h3>
+                                    <h5>第三张图片描述标题</h5>
                                 </div>
                             </div>
                         </div>
@@ -195,44 +195,77 @@
             </div>
 
         </div>
-        <div class="tuijian">
-            <h5 class="tuijianTitle">
-                <span>
-                    <img style="height: 30px;" src="./img/zuoyezi.png" alt="">
-                </span>
-                <span>
-                    <img style="height: 40px;" src="./img/hua.png" alt="">
-                </span>
-                <span style="margin-left: 20px;">好</span>
-                /
-                <span>课</span>
-                /
-                <span>推</span>
-                /
-                <span style="margin-right: 20px;">荐</span>
-                <span>
-                    <img style="height: 40px;" src="./img/hua.png" alt="">
-                </span>
-                <span>
-                    <img style="height: 30px;" src="./img/youyezi.png" alt="">
-                </span>
-
-            </h5>
-            <!-- 课程推荐 -->
-            <div class="tuijianContent">
-                <div class="course-box">
-                    <div class="course-img">
-                        
-                    </div>
-                    <div class="course-content">
-
+        <div class="tuijian-box">
+            <div class="tuijian">
+                <h5 class="tuijianTitle">
+                    <span>
+                        <img style="height: 30px;" src="./img/zuoyezi.png" alt="">
+                    </span>
+                    <span>
+                        <img style="height: 40px;" src="./img/hua.png" alt="">
+                    </span>
+                    <span style="margin-left: 20px;">好</span>
+                    /
+                    <span>课</span>
+                    /
+                    <span>推</span>
+                    /
+                    <span style="margin-right: 20px;">荐</span>
+                    <span>
+                        <img style="height: 40px;" src="./img/hua.png" alt="">
+                    </span>
+                    <span>
+                        <img style="height: 30px;" src="./img/youyezi.png" alt="">
+                    </span>
+    
+                </h5>
+                <!-- 课程推荐 -->
+                <div class="tuijianContent clearfix">
+                    <div class="course-box">
+                        <a href="">
+                            <div class="course-img-box">
+                                <img class="course-img" src="./img/siji.jpg" alt="課程">
+                            </div>
+                            <div class="course-content">
+                                    <h3 class="content-title">这里是英语四级听力</h3>
+                                    <div class="content-detail">
+                                        <div class="course-type">
+                                            <span>英语</span>
+                                            <span>四级</span>
+                                        </div>
+                                        <div class="course-rate">
+                                            <span class="rate-star">
+                                                    <img class="star" src="./icon/xing.png" alt="xing">
+                                                    <img class="star" src="./icon/xing.png" alt="xing">
+                                                    <img class="star" src="./icon/xing.png" alt="xing">
+                                                    <img class="star" src="./icon/xing.png" alt="xing">
+                                                    <img class="star" src="./icon/xing.png" alt="xing">
+                                            </span>
+                                        </div>
+                                    </div>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="footer">
-
+    <div class="footer-box">
+        <div class="footer">
+            <div class="footer-content">
+                    <a href="" target="_blank">企业合作</a>
+                    <a href="" target="_blank">企业合作</a>
+                    <a href="" target="_blank">企业合作</a>
+                    <a href="" target="_blank">企业合作</a>
+                    <a href="" target="_blank">企业合作</a>
+                    <a href="" target="_blank">企业合作</a>
+                    <a href="" target="_blank">企业合作</a>
+                    <a href="" target="_blank">企业合作</a>
+            </div>
+            <div class="footer-copyright">
+                <p>©2018&nbsp;tingshuo.com</p>
+            </div>
+        </div>
     </div>
 </body>
 
