--- a/Browser Folder/TingShuo1.1/TingShuo1.1/index.html
+++ b/Browser Folder/TingShuo1.1/TingShuo1.1/index.html
@@ -60,7 +60,7 @@
                             </div>
                         </li>
                         <li class="fl">
-                            <a href="">登录</a>
+                            <a href="me.html">登录</a>
                             /
                             <a href="">注册</a>
                         </li>
