--- a/Browser Folder/TingShuo1.1/index.html
+++ b/Browser Folder/TingShuo1.1/index.html
@@ -60,7 +60,7 @@
                             </div>
                         </li>
                         <li class="fl">
-                            <a href="">登录</a>
+                            <a href="me.html">登录</a>
                             /
                             <a href="">注册</a>
                         </li>
@@ -227,11 +227,12 @@
                                 <img class="course-img" src="./img/siji.jpg" alt="課程">
                             </div>
                             <div class="course-content">
-                                    <h3 class="content-title">这里是英语四级听力</h3>
+                                    <h3 class="content-title">这里是课程名字</h3>
                                     <div class="content-detail">
                                         <div class="course-type">
                                             <span>英语</span>
                                             <span>四级</span>
+                                            <span>听力</span>
                                         </div>
                                         <div class="course-rate">
                                             <span class="rate-star">
