--- a/Browser Folder/TingShuo1.1/index.html
+++ b/Browser Folder/TingShuo1.1/index.html
@@ -31,7 +31,7 @@
                             <a href="">首页</a>
                         </li>
                         <li class="fl">
-                            <a href="">分类</a>
+                            <a href="classify.html">分类</a>
                         </li>
                         <li class="fl">
                             <a href="">我的天啊</a>
@@ -74,7 +74,7 @@
                 </form>
             </div>
         </div>
-    </div>
+    </div><!--header-->
     <div class="index">
         <div class="lunboBar-w">
             <div class="lunboBar">
@@ -220,9 +220,9 @@
     
                 </h5>
                 <!-- 课程推荐 -->
-                <div class="tuijianContent clearfix">
+                <div class="courseContent clearfix">
                     <div class="course-box">
-                        <a href="">
+                        <a target="_blank" href="./course.html">
                             <div class="course-img-box">
                                 <img class="course-img" src="./img/siji.jpg" alt="課程">
                             </div>
