--- a/Browser Folder/TingShuo1.1/course.html
+++ b/Browser Folder/TingShuo1.1/course.html
@@ -106,23 +106,44 @@
                         <div class="class-detail-bottom">
                             <p class="fl">这里是课程简介</p>
                             <div class="class-menu">
-                                    <a href="">
-                                        <img style="height: 40px;" title="订阅" src="./icon/follow.png" alt="订阅">
-                                    </a>
-                                    <a href="">
-                                        <img style="height: 40px;" title="下载" src="./icon/download.png" alt="下载">
-                                    </a>
-                                </div>
+                                <a href="#">
+                                    <img id="follow-btn" onclick="followBtn(this)" style="height: 40px;" title="订阅" src="./icon/follow.png" alt="订阅">
+                                </a>
+                                <a href="">
+                                    <img style="height: 40px;" title="下载" src="./icon/download.png" alt="下载">
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="class-content">
                 <!--  听力  -->
-                <div class="listen">
-                    <div onclick="playPause()" class="listen-img fl">
-                            <audio src="./audio/111.mp3" id="myaudio" controls="controls" hidden="true"></audio>
-                            <img id="play" style="height: 50px;" src="./icon/play.png" alt="播放、暂停" title="点击播放/暂停">
+                <div class="course-tool">
+                    <div onclick="playPause()" class="listen-play fl">
+                        <audio src="./audio/111.mp3" id="myaudio" controls="controls" hidden="true"></audio>
+                        <img id="play" style="height: 50px;" src="./icon/play.png" alt="播放、暂停" title="点击播放/暂停">
+                    </div>
+                    <div class="course-test fr">
+                        <a title="点击进入测试" href="">
+                            <img style="height:50px;" src="./icon/test.png" alt="测试">
+                        </a>
+                    </div>
+                </div>
+                <div class="content-text">
+                    <div class="container-nav">
+                        <div class="text-center">
+                            <a onclick="lauguage(this)" href="#" class="sort-btn sort-btn-action">中文</a>
+                            <a onclick="lauguage(this)" href="#" class="sort-btn">英文</a>
+                        </div>
+                    </div>
+                    <div class="text-box">
+                        <div id="text-cn" class="text-open">
+                            对方的时光都会给福建和故事告诉对方过后的发生噶地方干哈的复合肥大黄蜂大唐官府搭噶地方噶地方官阿斯蒂芬噶所多过付多过付大过哈或或或或或或或或或或或或或
+                        </div>
+                        <div id="text-en" class="text-close">
+                            对方的时光都会给福建和故事告诉对方过后的发生噶地方干哈的复合肥大黄蜂大唐官府搭噶地方噶地方官阿斯蒂芬噶所多过付多过付大过哈或或或或或或或或或或或或或
+                        </div>
                     </div>
                 </div>
             </div>
@@ -147,15 +168,49 @@
         </div>
     </div>
     <script>
-        var playAudio=byId('play');
-        var myaudio=byId('myaudio');
-        function playPause(){
-            playAudio.src=(playAudio.getAttribute("src")=='./icon/play.png')?'./icon/pause.png':'./icon/play.png';
-            if(myaudio.paused){
-                myaudio.play();
+        var playAudio = byId('play');
+        var myaudio = byId('myaudio');
+        var cnEn = byClass('sort-btn');
+        var text_cn = byId('text-cn');
+        var text_en = byId('text-en');
+        var follow_btn = byId('follow-btn');
+
+        function followBtn(e) {
+            if(e.getAttribute('src')=='./icon/follow.png'){
+                e.src='./icon/follow-yes.png';
+                e.title='已订阅';
+            }else{
+                alert('您已经订阅了~~')
             }
-            else{
+        }
+
+        function playPause() {
+            playAudio.src = (playAudio.getAttribute("src") == './icon/play.png') ? './icon/pause.png' :
+                './icon/play.png';
+            if (myaudio.paused) {
+                myaudio.play();
+            } else {
                 myaudio.pause();
+            }
+        }
+
+        function lauguage(e) {
+            if (e == cnEn[0]) {
+                if (e.className.indexOf('sort-btn-action') > -1) {
+                    e.classList.remove('sort-btn-action');
+                    text_cn.className = 'text-close';
+                } else {
+                    e.classList.add('sort-btn-action');
+                    text_cn.className = 'text-open';
+                }
+            } else {
+                if (e.className.indexOf('sort-btn-action') > -1) {
+                    e.classList.remove('sort-btn-action');
+                    text_en.className = 'text-close';
+                } else {
+                    e.classList.add('sort-btn-action');
+                    text_en.className = 'text-open';
+                }
             }
         }
     </script>
